--- a/_posts/2018-09-14-%E5%BE%9E-ios-app-%E4%B8%80%E9%8D%B5%E7%99%BC%E9%80%81%E6%96%87%E7%AB%A0%E5%88%B0-github-io.markdown
+++ b/_posts/2018-09-14-%E5%BE%9E-ios-app-%E4%B8%80%E9%8D%B5%E7%99%BC%E9%80%81%E6%96%87%E7%AB%A0%E5%88%B0-github-io.markdown
@@ -1,13 +1,7 @@
 ---
 layout: post
-title: "從 iOS app 一鍵發送文章到 GitHub.io"
-date: 2018-09-14
-author: ethanhuang13
-tags:
-  - 
-category: blog
-blog: true
+title: 從 iOS app 一鍵發送文章到 GitHub.io
 ---
-
+根據[這篇文章](https://www.ryandaigle.com/a/ipad-pro-publishing-from-ulysses-to-jekyll-with-one-tap/)的方式設定。
 
 主要是透過 iOS 上的 Workflow、WorkingCopy app，以及 GitHub.io 設定好 jekyll。
